# Changes
# Copyright (c) 2009 by David Golden. All rights reserved.
# Licensed under Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# A copy of the License was distributed with this file or you may obtain a 
# copy of the License from http://www.apache.org/licenses/LICENSE-2.0

Revision history for Capture-Tiny

0.03

  Fixed:

    - Tests skip if not Win32 and no fork() (rather than Build.PL and
      Makefile.PL failing); this allows capture() on odd platforms, even if 
      fork doesn't work

0.02 Tue Feb 17 17:24:35 EST 2009

  Fixed: 

    - Bug recovering output when STDOUT is empty (reported by Vincent Pit)

    - Removed Fatal.pm to avoid global action-at-a-distance

0.01 Fri Feb 13 23:15:19 EST 2009

  Added:
    - 'capture' and 'tee' functions