@@ -1,8 +1,9 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.31012
+# Note: this file was auto-generated by Module::Build::Compat version 0.30
 require 5.006;
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
+          'PL_FILES' => {},
           'INSTALLDIRS' => 'site',
           'NAME' => 'Capture::Tiny',
           'EXE_FILES' => [],
